@@ -4,11 +4,17 @@ package eventlog
 // to event message files.
 
 import (
+	"expvar"
 	"time"
 
 	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/libbeat/logp"
 	"github.com/elastic/beats/winlogbeat/sys/eventlogging"
+)
+
+// Stats for the message file caches.
+var (
+	cacheStats = expvar.NewMap("msgFileCacheStats")
 )
 
 // Constants that control the cache behavior.
@@ -31,6 +37,11 @@ type messageFilesCache struct {
 	loader       messageFileLoaderFunc
 	freer        freeHandleFunc
 	eventLogName string
+
+	// Cache metrics.
+	hit  func() // Increments number of cache hits.
+	miss func() // Increments number of cache misses.
+	size func() // Sets the current cache size.
 }
 
 // newHandleCache creates and returns a new handleCache that has been
@@ -39,14 +50,24 @@ type messageFilesCache struct {
 func newMessageFilesCache(eventLogName string, loader messageFileLoaderFunc,
 	freer freeHandleFunc) *messageFilesCache {
 
+	size := &expvar.Int{}
+	cacheStats.Set(eventLogName+"Size", size)
+
 	hc := &messageFilesCache{
 		loader:       loader,
 		freer:        freer,
 		eventLogName: eventLogName,
+		hit:          func() { cacheStats.Add(eventLogName+"Hits", 1) },
+		miss:         func() { cacheStats.Add(eventLogName+"Misses", 1) },
 	}
 	hc.cache = common.NewCacheWithRemovalListener(expirationTimeout,
 		initialSize, hc.evictionHandler)
 	hc.cache.StartJanitor(janitorInterval)
+	hc.size = func() {
+		s := hc.cache.Size()
+		size.Set(int64(s))
+		debugf("messageFilesCache[%s] size=%d", hc.eventLogName, s)
+	}
 	return hc
 }
 
@@ -57,6 +78,8 @@ func newMessageFilesCache(eventLogName string, loader messageFileLoaderFunc,
 func (hc *messageFilesCache) get(sourceName string) eventlogging.MessageFiles {
 	v := hc.cache.Get(sourceName)
 	if v == nil {
+		hc.miss()
+
 		// Handle to event message file for sourceName is not cached. Attempt
 		// to load the Handles into the cache.
 		v = hc.loader(hc.eventLogName, sourceName)
@@ -65,11 +88,17 @@ func (hc *messageFilesCache) get(sourceName string) eventlogging.MessageFiles {
 		// check if a value was already loaded.
 		existing := hc.cache.PutIfAbsent(sourceName, v)
 		if existing != nil {
-			// A value was already loaded, so free the handles we created.
-			existingMessageFiles, _ := existing.(eventlogging.MessageFiles)
-			hc.freeHandles(existingMessageFiles)
-			return existingMessageFiles
+			// A value was already loaded, so free the handles we just created.
+			messageFiles, _ := v.(eventlogging.MessageFiles)
+			hc.freeHandles(messageFiles)
+
+			// Return the existing cached value.
+			messageFiles, _ = existing.(eventlogging.MessageFiles)
+			return messageFiles
 		}
+		hc.size()
+	} else {
+		hc.hit()
 	}
 
 	messageFiles, _ := v.(eventlogging.MessageFiles)
@@ -79,13 +108,16 @@ func (hc *messageFilesCache) get(sourceName string) eventlogging.MessageFiles {
 // evictionHandler is the callback handler that receives notifications when
 // a key-value pair is evicted from the messageFilesCache.
 func (hc *messageFilesCache) evictionHandler(k common.Key, v common.Value) {
+	// Update the size on a different goroutine after the callback completes.
+	defer func() { go hc.size() }()
+
 	messageFiles, ok := v.(eventlogging.MessageFiles)
 	if !ok {
 		return
 	}
 
-	logp.Debug("eventlog", "Evicting messageFiles %+v for sourceName %v.",
-		messageFiles, k)
+	debugf("messageFilesCache[%s] Evicting messageFiles %+v for sourceName %v.",
+		hc.eventLogName, messageFiles, k)
 	hc.freeHandles(messageFiles)
 }
 
@@ -95,7 +127,8 @@ func (hc *messageFilesCache) freeHandles(mf eventlogging.MessageFiles) {
 	for _, fh := range mf.Handles {
 		err := hc.freer(fh.Handle)
 		if err != nil {
-			logp.Warn("FreeLibrary error for handle %v", fh.Handle)
+			logp.Warn("messageFilesCache[%s] FreeLibrary error for handle %v",
+				hc.eventLogName, fh.Handle)
 		}
 	}
 }
